<resources>
    <string name="app_name">Register Form</string>
    <string name="text_view_create_account">Create account</string>
    <string name="text_input_layout_name">Name</string>
    <string name="text_input_layout_surname">Surname</string>
    <string name="text_input_layout_e_mail">E-mail</string>
    <string name="text_input_layout_phone">Phone</string>
    <string name="text_input_layout_passwrod">Passwrod</string>
    <string name="button_sign_up">Sign up</string>
</resources>